show thumbnail and changed photos

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,9 +5,9 @@ layout: default
 
 	{% include post-heading.html post=page post_page=true %}
 
-	<!--<div class="image">
+	<div class="image">
 		<img src="{{ page.featured_image }}" alt="{{ page.title }}">
-	</div>-->
+	</div>
 
 	<!--<div class="recipe-contents">
 		<div class="ingredients">
